--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.7.5",
     "sweetalert2": "^11.11.1",
+    "vite-plugin-node-polyfills": "^0.22.0",
     "webrtc-adapter": "^9.0.1"
   },
   "devDependencies": {
@@ -37,7 +38,6 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "vite": "^5.2.0",
-    "vite-plugin-node-polyfills": "^0.22.0"
+    "vite": "^5.2.0"
   }
 }
